--- a/reiniging.html
+++ b/reiniging.html
@@ -18,7 +18,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="https://github.com/clemenspoort/reinigingsapp/raw/main/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="96x96" href="https://github.com/clemenspoort/reinigingsapp/raw/main/favicon-96x96.png">
         <link rel="icon" type="image/png" sizes="16x16" href="https://github.com/clemenspoort/reinigingsapp/raw/main/favicon-16x16.png">
-        <title>Aanwezigheid</title>
+        <title>Reiniging</title>
         <style type="text/css">
             body, html
             {
