--- a/reiniging.html
+++ b/reiniging.html
@@ -25,7 +25,7 @@
                 margin: 0; padding: 0; height: 100%; overflow: hidden;
             }
             body {
-                background: dodgerblue;
+                background: orange;
             }
             #content
             {
