--- a/aanwezigheid.html
+++ b/aanwezigheid.html
@@ -18,7 +18,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="https://github.com/clemenspoort/aanwezigheid-app/raw/main/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="96x96" href="https://github.com/clemenspoort/aanwezigheid-app/raw/main/favicon-96x96.png">
         <link rel="icon" type="image/png" sizes="16x16" href="https://github.com/clemenspoort/aanwezigheid-app/raw/main/favicon-16x16.png">
-        <meta name="theme-color" content="#FFA500">
+        <meta name="theme-color" content="#1E90FF">
         <title>Aanwezigheid</title>
         <style type="text/css">
             body, html
