--- a/inventaris.html
+++ b/inventaris.html
@@ -19,7 +19,7 @@
         <link rel="icon" type="image/png" sizes="96x96" href="https://github.com/clemenspoort/inventarisapp/raw/main/favicon-96x96.png">
         <link rel="icon" type="image/png" sizes="16x16" href="https://github.com/clemenspoort/inventarisapp/raw/main/favicon-16x16.png">
         <meta name="theme-color" content="#FFA500">
-        <title>Reiniging</title>
+        <title>Inventaris</title>
         <style type="text/css">
             body, html
             {
