--- a/gebed/index.html
+++ b/gebed/index.html
@@ -18,7 +18,7 @@
         <link rel="icon" type="image/png" sizes="96x96" href="https://apps.clemenspoort.org/gebedsapp/favicon-96x96.png">
         <link rel="icon" type="image/png" sizes="16x16" href="https://apps.clemenspoort.org/gebedsapp/favicon-16x16.png">
         <meta name="theme-color" content="#ffffff">
-        <title>Gebed van de dag</title>
+        <title>Avondgebed</title>
         <style type="text/css">
             body, html
             {
