--- a/gebed/bewerker/index.html
+++ b/gebed/bewerker/index.html
@@ -19,7 +19,7 @@
         <link rel="icon" type="image/png" sizes="96x96" href="https://apps.clemenspoort.org/gebedsapp/favicon-96x96.png">
         <link rel="icon" type="image/png" sizes="16x16" href="https://apps.clemenspoort.org/gebedsapp/favicon-16x16.png">
         <meta name="theme-color" content="#ffffff">
-        <title>Gebed van de dag - Bewerker</title>
+        <title>Avondgebed - Bewerker</title>
         <style type="text/css">
             body, html
             {
