--- a/avondgebed/bewerker/index.html
+++ b/avondgebed/bewerker/index.html
@@ -3,7 +3,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="mobile-web-app-capable" content="yes">
-        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="apple-mobile-web-app-status-bar-style" content="default">
         <meta charset="utf8">
                 <link rel="apple-touch-icon" sizes="57x57" href="https://apps.clemenspoort.org/gebedsapp/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="https://apps.clemenspoort.org/gebedsapp/apple-icon-60x60.png">
