--- a/infoscherm/index.html
+++ b/infoscherm/index.html
@@ -1,6 +1,25 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="mobile-web-app-capable" content="yes">
+        <link rel="apple-touch-icon" sizes="57x57" href="https://apps.clemenspoort.org/infoscherm/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="https://apps.clemenspoort.org/infoscherm/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="https://apps.clemenspoort.org/infoscherm/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="https://apps.clemenspoort.org/infoscherm/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="https://apps.clemenspoort.org/infoscherm/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="https://apps.clemenspoort.org/infoscherm/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="https://apps.clemenspoort.org/infoscherm/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="https://apps.clemenspoort.org/infoscherm/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="https://apps.clemenspoort.org/infoscherm/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="https://apps.clemenspoort.org/infoscherm/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="https://apps.clemenspoort.org/infoscherm/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="https://apps.clemenspoort.org/infoscherm/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="https://apps.clemenspoort.org/infoscherm/favicon-16x16.png">
+        <link rel="manifest" href="/manifest.json">
+        <meta name="msapplication-TileColor" content="#ee7933">
+        <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+        <meta name="theme-color" content="#ee7933">
         <title>Clemenspoort Infoscherm</title>
         <style type="text/css">
             body, html
