--- a/aanwezigheid/index.html
+++ b/aanwezigheid/index.html
@@ -35,9 +35,10 @@
         </style>
     </head>
     <body>
-        <p style="position:absolute; left: 0; right: 0; top: 0; width: 100vw; padding: 5px; background-color: light-coral;">Deze app is verhuist naar <a href="https://aanwezigheid.clemenspoort.be>aanwezigheid.clemenspoort.be</a>. Deze versie is niet langer in gebruik.</p>
         <div id="content">
             <iframe width="100%" height="100%" frameborder="0" src="https://script.google.com/macros/s/AKfycbzt326v_RwmKL4Hw-h06PSNKR40Dr1ChHu4a-wCMoE6ssyNDgAjj6WHskz9cEOIWARRxA/exec"></iframe>
+            <p style="width: 100vw; padding: 5px; background-color: light-coral;">Deze app is verhuist naar <a href="https://aanwezigheid.clemenspoort.be>aanwezigheid.clemenspoort.be</a>. Deze versie is niet langer in gebruik.</p>
+            
         </div>
     </body>
 </html>
