--- a/inventaris/index.html
+++ b/inventaris/index.html
@@ -36,6 +36,50 @@
     </head>
     <body>
         <div id="content">
+            <html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta charset="utf8">
+                <link rel="apple-touch-icon" sizes="57x57" href="https://github.com/clemenspoort/aanwezigheid-app/raw/main/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="https://github.com/clemenspoort/aanwezigheid-app/raw/main/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="https://github.com/clemenspoort/aanwezigheid-app/raw/main/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="https://github.com/clemenspoort/aanwezigheid-app/raw/main/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="https://github.com/clemenspoort/aanwezigheid-app/raw/main/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="https://github.com/clemenspoort/aanwezigheid-app/raw/main/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="https://github.com/clemenspoort/aanwezigheid-app/raw/main/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="https://github.com/clemenspoort/aanwezigheid-app/raw/main/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="https://github.com/clemenspoort/aanwezigheid-app/raw/main/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="https://github.com/clemenspoort/aanwezigheid-app/raw/main/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="https://github.com/clemenspoort/aanwezigheid-app/raw/main/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="https://github.com/clemenspoort/aanwezigheid-app/raw/main/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="https://github.com/clemenspoort/aanwezigheid-app/raw/main/favicon-16x16.png">
+        <meta name="theme-color" content="#1E90FF">
+        <title>Aanwezigheid</title>
+        <style type="text/css">
+            body, html
+            {
+                margin: 0; padding: 0; height: 100%; overflow: hidden;
+            }
+            body {
+                background: dodgerblue;
+            }
+            #content
+            {
+                position:absolute; left: 0; right: 0; bottom: 0; top: 0px; 
+            }
+        </style>
+    </head>
+    <body>
+        <div id="content">
+            <h4 style="width: 100vw; margin: 0; padding-left: 5px; padding-right: 5px; padding-top: 20px; padding-bottom: 20px; background-color: #ffcccb; text-align: center; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">Deze app is verhuist naar <a href="https://inventaris.clemenspoort.be">inventaris.clemenspoort.be</a> en gaat binnenkort enkel nog via deze adres bereikbaar zijn.</h4>
+            <iframe width="100%" height="100%" frameborder="0" src="https://script.google.com/macros/s/AKfycbzt326v_RwmKL4Hw-h06PSNKR40Dr1ChHu4a-wCMoE6ssyNDgAjj6WHskz9cEOIWARRxA/exec"></iframe>
+        </div>
+    </body>
+</html>
+
             <iframe width="100%" height="100%" frameborder="0" src="https://script.google.com/macros/s/AKfycbwxCQrcYdbRYYSBVe9_IfWbsHFALVZvlzirYhkQmBqAihYusvO6fkj0_mGk-6FxwLovXA/exec"></iframe>
         </div>
     </body>
