--- a/aanwezigheid/index.html
+++ b/aanwezigheid/index.html
@@ -36,8 +36,7 @@
     </head>
     <body>
         <div id="content">
-            <h4 style="width: 100vw; margin: 0; padding-left: 5px; padding-right: 5px; padding-top: 20px; padding-bottom: 20px; background-color: #ffcccb; text-align: center; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">Deze app is verhuist naar <a href="https://aanwezigheid.clemenspoort.be">aanwezigheid.clemenspoort.be</a> en gaat binnenkort enkel nog via deze adres bereikbaar zijn.</h4>
-            <iframe width="100%" height="100%" frameborder="0" src="https://script.google.com/macros/s/AKfycbzt326v_RwmKL4Hw-h06PSNKR40Dr1ChHu4a-wCMoE6ssyNDgAjj6WHskz9cEOIWARRxA/exec"></iframe>
+            <h4 style="width: 100vw; margin: 0; padding-left: 5px; padding-right: 5px; padding-top: 20px; padding-bottom: 20px; background-color: #ffcccb; text-align: center; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif">Dit is een oude versie van de app die niet meer in gebruik is. U vindt de huidige versie op <a href="https://aanwezigheid.clemenspoort.be">aanwezigheid.clemenspoort.be</a>.</h4>            <iframe width="100%" height="100%" frameborder="0" src="https://script.google.com/macros/s/AKfycbzt326v_RwmKL4Hw-h06PSNKR40Dr1ChHu4a-wCMoE6ssyNDgAjj6WHskz9cEOIWARRxA/exec"></iframe>
         </div>
     </body>
 </html>
